style.css
html {
  height: 100%;
  width: 100%;
}

/* Header ruleset */
.header-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;

  font-size: 24px;
  font-weight: bold;
  color: #333;

  background-color: #0099cc;

  padding-top: 20px;
  /* Add spacing at the top of the header */
  margin-bottom: 20px;
  /* Add spacing at the bottom of the header */
}

.header-item:nth-of-type(1) {
  float: left;
  width: 35%;
  background-color: #f0f0f0;
  padding: 20px;
}

.header-item:nth-of-type(2) {
  float: right;
  width: 65%;
  /* Set the width to 65% (100% - 35%) */
  background-color: #e0e0e0;
  padding: 20px;
}

#header-img {
  max-width: 100%;
  width: 500px;
  /* Define the width of your image */
  margin-left: 10px;
  /* Add left margin around the image */
  margin-right: 10px;
  /* Add right margin around the image */
}

.header-button {
  background-color: white;
  border: 2px solid black;
  /* Add a border with color */
  color: white;
  font-size: 16px;
  text-align: center;
  padding: 10px 20px;

  margin: 5px;

  cursor: pointer;

}

.main-title {
  font-family: Arial, sans-serif;
  font-size: 32px;
  color: green;
  text-align: center;
}

body {

  /* Add a background color or image */
  background-color: lightblue;

  background-image: url('');

  font-family: Arial;
  font-size: 16px;
  color: black;

  /* Adjust the padding and margins */
  padding-top: 0;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0;

  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;

}



#interesting {
  color: white;
  font-size: 40px;
  font-weight: bold;
  border: 5px black;
  padding: 10px;


}



p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 10px;
  color: #333;
}

a {}

a:link {
  text-decoration: none;
  color: #008CBA;
}

a:visited {
  text-decoration: none;
  color: #551a8b;
}

a:hover {
  text-decoration: underline;
  color: #ff6600;
}

a:active {
  text-decoration: underline;
  color: #ff0000;
}

/*
  Style Lists: Styles added to the ol or ul style rulesets affect the entire
  list, while styles added to the li style ruleset affect individual list items
*/




/*
  Style Buttons: Add style rules for any headings (h1-6),
  paragraphs and links
*/

button {
  background-color: #008CBA;
  border: none;
  color: white;
  font-size: 16px;
  text-align: center;
  padding: 15px 32px;
  cursor: pointer;
}



/* Select and style elements by class name or ID */
.image-text-container {
  display: flex;
  align-items: center;
  /* Vertically center the content */
  max-width: 100%;
  /* Ensure the container doesn't exceed the parent's width */
}

.left-image {
  max-width: 30%;
  /* Adjust the image size as needed */
  height: auto;
  display: block;
  margin-left: 100px;
}

.text-content {
  flex: 1;
  /* Allow the text content to expand and take up the remaining space */
}


.image-container {
  display: flex;
  justify-content: center;
  align-items: center;

}


p {
  font-size: 16px;
  /* Set the font size for paragraphs */
  line-height: 1.5;
  /* Set the line height for paragraphs */
  margin-bottom: 10px;
  /* Add spacing at the bottom of paragraphs */
  color: #000;
  /* Set the text color for paragraphs */
  padding: 10px;
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;

}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Arial', sans-serif;
  font-weight: bold;
  color: #000;
  padding: 10px;
  text-align: center;

}

.video-container {
  position: relative;
  width: 50%;
  padding-bottom: 28.125%;
  /* 9:16 aspect ratio (715 / 1271) */
  height: 0;
  overflow: hidden;
  margin: 0 auto;
  /* Add this line to center the video horizontally */
}


.video-container iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #333;
  text-align: center;
  color: #fff;
  padding: 10px;

}

.footer a {
  color: #fff;
  /* Text color for the links in the footer */
  text-decoration: none;
  /* Remove underlines from the links */
  margin: 0 10px;
  /* Add horizontal spacing between links */
}







/* Part 1: Navbar */

/* General style rule set for all items in ul */
.navbar ul {
  list-style-type: none;
  overflow: hidden;
  display: flex;
  justify-content: space-around;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
  /* To evenly distribute the nav items */
  align-items: center;
  /* To vertically center the nav items */
  padding: 0;


  background-color: #0099cc;

}

/* Style rule set for individual li */
.navbar ul li {
  font-family: Arial;
  color: black;
  font-size: 16px;
  float: left;
  margin: 10px;

}


/* Style rule set for individual li link */
.navbar ul li a {
  display: block;
  font-family: Arial;
  color: white;
  font-size: 16px;
  text-decoration: none;

}

/* Style rule set for hovered link */
.navbar ul li a:hover {
  font-weight: bold;
}




/* Part 2: Flexbox */

/* General style rule set for flex container */
.flex-container {
  display: flex;
  flex-direction: row;
  gap: 20px;
}



/* Style set for all flex-items */
.flex-item {
  background: white;
  color: black;
  font-weight: bold;
  text-align: center;
}

/* Add style to button */
#theme-button {
  background-color: white;
  border: 2px solid black;
  /* Add a border with color */
  color: black;
  /* Change text color to black */
  font-size: 16px;
  text-align: center;
  padding: 10px;
  border-radius: 5px;
  cursor: pointer;
}



/* Customize Dark Mode Theme */
.dark-mode {
  background-color: black;
  color: white;
}

.dark-mode .header-container {
  background-color: #111;
  /* Darker header background color */
  color: white;
  /* Text color for the header in dark mode */
}

